prevent to do form from flickering up and down slightly while typing

--- a/src/components/utilServices/todo/ToDoItemForm.css
+++ b/src/components/utilServices/todo/ToDoItemForm.css
@@ -5,7 +5,7 @@
 
 .to-do-item-form-input-area {
   width: 100%;
-  min-height: 1vw;
+  min-height: 2.85vw;
   height: fit-content;
   padding: 0.65vw 0.65vw 0.35vw 0.65vw;
   margin-bottom: 0.65vw;
